Finished work on HTML page

--- a/submissions/rosalie568/index.html
+++ b/submissions/rosalie568/index.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML-something</title>
+        <title>Tiffany Hawkins</title>
     </head>
     <body>
-        <p>Tiffany Hawkins</p>
+        <main>
+            <article>
+                <header>
+                    <h1>About me!</h1>
+                </header>
+                <p> I was born in Tennessee and lived there for for 24 years.I have one older sister named Chelsey.
+                    When i was in high school I realized I have a passion for computer programming. I decided to go to college to learn more about
+                    it.  While I was in college, I worked at Publix for 3 years as a cashier.  I spent 5 years learning about computer programming
+                    and got a bachelor's degree in Computer Science.  I later moved to Missouri to be closer to my boyfriend.  He told me of a program
+                    called LaunchCode that i can take to gain more experience with programming.  I am enjoying every day that we spend time together
+                    my boyfriend and I.
+                </p>
+            </article>
+
+            <article>
+                <h2>Hobbies! </h2>
+                <p> I have many different hobbies taht I do when im bored.  My first hobby is playing video games and trying to get every single
+                    item in the game (including trophies if available).  I play almost all types of games except most shooting games and sport games.
+                    I owe so many different systems of vidoe games and I enjoy them all.  My second hobby is reading books.  I enjoy reading mystery,
+                    fantasy, and romance books.  I read most of my books on my kindle, but I also own some in hard and paperback.  My third hobby
+                    painting and coloring.  I enjoy doing paint-by-numbers or color-by-numbers or any thing related to it.  I don't draw too much
+                    but any drawing that are done I like to paint or color it in.  Another hobby I have is working on puzzles.  I enjoy working on
+                    puzzles then glueing them together and hanging them up on the wall.
+                </p>
+                <table>
+                    <thead> Some of my hobbies: </thead>
+                    <tr>
+                        <td> <img src="images/Paint1.jpg" /> </td>
+                        <td> <img src="images/Tiger.jpg" /> </td>
+                        <td> <img src="images/Wolf.jpg" /> </td>
+                    </tr>
+                    <tr>
+                        <td>I drew and painted in high school on cubism using only green and blue colors. </td>
+                        <td>This is a paint-by-numbers that I painted of my favorite animals Tigers. </td>
+                        <td>Another paint-by-numbers that was harder then the tiger one because you have to blend colors together. </td>
+                    </tr>
+                </table>
+            </article>
+
+            <article>
+                <h2> Favorite Animals! </h3>
+                <p> I have many types of animals that I love.  My first favorite animal is tigers.  I like white tigers more than orange ones.
+                    My next favoriate animal is dolphins.  I also like cats and dogs when they are all cute and cuddly and not jumping on me
+                    or barking all the time.
+                </p>
+            </article>
+        </main>
+
+        <footer> &copy 2016 Tiffany Hawkins </footer>
+
     </body>
 </html>
