More work on HTML

--- a/submissions/rosalie568/index.html
+++ b/submissions/rosalie568/index.html
@@ -49,6 +49,13 @@
                     My next favoriate animal is dolphins.  I also like cats and dogs when they are all cute and cuddly and not jumping on me
                     or barking all the time.
                 </p>
+
+                <table>
+                    <tr>
+                        <td> <img src="images/tiger2.gif"> </td>
+                        <td> <img src="images/wolf2.gif"> </td>
+                    </td>
+                </table>
             </article>
         </main>
 
