Adding CSS style

--- a/submissions/rosalie568/index.html
+++ b/submissions/rosalie568/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Tiffany Hawkins</title>
+        <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
     <body>
         <main>
@@ -9,7 +10,7 @@
                 <header>
                     <h1>About me!</h1>
                 </header>
-                <p> I was born in Tennessee and lived there for for 24 years.I have one older sister named Chelsey.
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was born in Tennessee and lived there for for 24 years.I have one older sister named Chelsey.
                     When i was in high school I realized I have a passion for computer programming. I decided to go to college to learn more about
                     it.  While I was in college, I worked at Publix for 3 years as a cashier.  I spent 5 years learning about computer programming
                     and got a bachelor's degree in Computer Science.  I later moved to Missouri to be closer to my boyfriend.  He told me of a program
@@ -20,7 +21,7 @@
 
             <article>
                 <h2>Hobbies! </h2>
-                <p> I have many different hobbies taht I do when im bored.  My first hobby is playing video games and trying to get every single
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have many different hobbies taht I do when im bored.  My first hobby is playing video games and trying to get every single
                     item in the game (including trophies if available).  I play almost all types of games except most shooting games and sport games.
                     I owe so many different systems of vidoe games and I enjoy them all.  My second hobby is reading books.  I enjoy reading mystery,
                     fantasy, and romance books.  I read most of my books on my kindle, but I also own some in hard and paperback.  My third hobby
@@ -29,11 +30,12 @@
                     puzzles then glueing them together and hanging them up on the wall.
                 </p>
                 <table>
-                    <thead> Some of my hobbies: </thead>
+                    <tr> </tr>
+                        <td id="green" colspan="3"> <strong>Some of my hobbies: </strong> </td>
                     <tr>
                         <td> <img src="images/Paint1.jpg" /> </td>
-                        <td> <img src="images/Tiger.jpg" /> </td>
-                        <td> <img src="images/Wolf.jpg" /> </td>
+                        <td> <img class="big" src="images/Tiger.jpg" /> </td>
+                        <td> <img class="big" src="images/Wolf.jpg" /> </td>
                     </tr>
                     <tr>
                         <td>I drew and painted in high school on cubism using only green and blue colors. </td>
@@ -45,7 +47,7 @@
 
             <article>
                 <h2> Favorite Animals! </h3>
-                <p> I have many types of animals that I love.  My first favorite animal is tigers.  I like white tigers more than orange ones.
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have many types of animals that I love.  My first favorite animal is tigers.  I like white tigers more than orange ones.
                     My next favoriate animal is dolphins.  I also like cats and dogs when they are all cute and cuddly and not jumping on me
                     or barking all the time.
                 </p>
